refactor to prevent duplicate pings
