# server/handler/imagine/handler.go
@@ -5,6 +5,7 @@ import (
 	"fmt"
 	"log"
 	"net/http"
+	"strings"
 
 	"github.com/RivasCVA/fetchmojiai-service/api"
 	"github.com/RivasCVA/fetchmojiai-service/client/openai"
@@ -38,32 +39,14 @@ func (h *ImagineHandler) Imagine(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	// extract the properties
-	event := body.Event
-	prompt := h.slackClient.StripUserMentions(event.Text)
-	userId := event.User
-	timestamp := event.Ts
-
-	// ask openai
-	url, err := h.openaiClient.GenerateImage(prompt)
-	if err != nil {
-		fmt.Println(fmt.Errorf("Imagine: unable to generate the image: %w", err))
-		response.WriteError(w, http.StatusInternalServerError, "unable to generate the image")
-		return
-	}
-
-	// send reply image and message via slack
-	err = h.slackClient.ReplyImageWithMessage(userId, timestamp, url, prompt, fmt.Sprintf("<@%s> %s", userId, prompt))
-	if err != nil {
-		fmt.Println(fmt.Errorf("Imagine: unable to send the image to slack: %w", err))
-		response.WriteError(w, http.StatusInternalServerError, "unable to send the image to slack")
-		return
+	// only reply to messages that have a mention
+	// note: slack also pings the endpoint when the bot sends messages
+	if strings.Contains(body.Event.Text, "@") {
+		// asynchronously generate the image and reply to the user
+		go generateAndReply(h, body.Event)
 	}
 
 	// respond
-	out := api.ImagineResponse{
-		Image: url,
-		User:  userId,
-	}
+	out := api.ImagineResponse{Accepted: true}
 	response.Write(w, http.StatusOK, out)
 }
